tests/errors/init_state/ref_obligations/mut_ref_moved_out_return_leaks.sim
# Move-out leaves cur=Uninit; not refilled → obligation unmet.
fn f(r: &mut i64) {
  x: i64;
  entry:
    x = move r.*;
    return
}
