tests/errors/init_state/ref_obligations/mut_ref_moved_out_return_leaks.err.expected
error: at 6:5: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 'r' has unfulfilled obligation here (is_init=false, ends_init=true)
   |
 6 |     return
   |     ^^^^^^
